--- a/README
+++ b/README
@@ -14,7 +14,7 @@ maybe [opam install otfm] ?
 
 # syntax
 
--- terms (u,v)
+## terms (u,v)
 0            empty graph
 a            a-labeled edge
 u | v        parallel composition
@@ -28,27 +28,27 @@ s(u1,...,uk) series composition (without the forget)
 u.v          binary sequential composition
 u'           swap last two sources
 
--- sourced terms (at top level only)
+## sourced terms (at top level only)
 #k u                              set arity to k
 #<key=val;...><key=val;...>... u  set arity and source decorations
 
--- labels (a)
+## labels (a)
 s             when s does not contain f/l/s, which are reserved for forgets/lifts/series
 -s            when s does, or when s is empty
 
--- permutations (p)
+## permutations (p)
 [231]         explicit permutation of size <=9
 (234)         cyclic permutation (here, [1342]), of size <=9
 [1,..,8,10,9] explicit permutation of possibly greater size
 (9,10)        cyclic permutation of possible greater size
 note: the identity permutations cannot be written
 
--- injections (i)
+## injections (i)
 {264}         injection mapping 1 to 2, 2 to 6, 3 to 4 
 {2,6,11}      injection with potentially bigger values
 {011}         injection mapping 1 to 11
 
--- decorations
+## decorations
 forgets, edges, stars, and dots can be decored with key value lists:
  f<key=val;...>u
  a<key=val;...>
